2011-02-14  Tony Chang  <tony@chromium.org>

Reviewed by Dimitri Glazkov.

        <select> elements don't honor border:0px in chromium-linux
        https://bugs.webkit.org/show_bug.cgi?id=51152

        No new tests, covered by existing pixel results (fast/forms/basic-selects.html
        convers lots of cases).

        * css/themeChromiumLinux.css:
        (select):
        * platform/chromium/PlatformBridge.h:
        * rendering/RenderThemeChromiumLinux.cpp:
        (WebCore::RenderThemeChromiumLinux::paintButton):
        (WebCore::RenderThemeChromiumLinux::paintMenuList):
          match border logic in RenderThemeChromiumWin.cpp:
          http://trac.webkit.org/browser/trunk/Source/WebCore/rendering/RenderThemeChromiumWin.cpp#L463
2011-02-14  Tony Chang  <tony@chromium.org>

        Reviewed by Dimitri Glazkov.

        <select> elements don't honor border:0px in chromium-linux
        https://bugs.webkit.org/show_bug.cgi?id=51152

        * public/linux/WebThemeEngine.h:
        * src/PlatformBridge.cpp:
        (WebCore::GetWebThemeExtraParams):

Canonical link: https://commits.webkit.org/68493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78493 268f45cc-cd09-0410-ab3c-d52691b4dbfc