Source/WebKit/chromium/public/linux/WebThemeEngine.h
@@ -88,6 +88,7 @@ public:
         bool checked;
         bool indeterminate; // Whether the button state is indeterminate.
         bool isDefault; // Whether the button is default button.
+        bool hasBorder;
         WebColor backgroundColor;
     };
 
@@ -100,6 +101,8 @@ public:
 
     // Extra parameters for PartMenuList
     struct MenuListExtraParams {
+        bool hasBorder;
+        bool hasBorderRadius;
         int arrowX;
         int arrowY;
         WebColor backgroundColor;
